# mcp_shared_lib

./: .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  README.md  TRANSPORT_GUIDE.md  pyproject.toml  requirements.txt  test_ci_locally.sh
.github/workflows/: ci.yml  lint.yml  release.yml
.history/: pyproject_20250529213541.toml  pyproject_20250531103039.toml  pyproject_20250531103045.toml  pyproject_20250531103108.toml  pyproject_20250531104042.toml  pyproject_20250531105342.toml  pyproject_20250531105752.toml  pyproject_20250531105916.toml  pyproject_20250531110052.toml  pyproject_20250531113158.toml  pyproject_20250531120743.toml
.history/src/: __init___20250531114235.py  __init___20250531114248.py
.history/src/models/: git_models_20250529070751.py  git_models_20250529211258.py
config/: default.yaml
docs/: STRUCTURE.md
src/config/: __init__.py
src/error/: handler.py
src/lib/error/: __init__.py
src/lib/state/: __init__.py
src/mcp_shared_lib/: __init__.py
src/mcp_shared_lib/config/: base.py  git_analyzer.py  loader.py
src/mcp_shared_lib/error/: __init__.py
src/mcp_shared_lib/lib/: __init__.py
src/mcp_shared_lib/lib/error/: handler.py
src/mcp_shared_lib/lib/state/: manager.py
src/mcp_shared_lib/lib/telemetry/: __init__.py  monitor.py
src/mcp_shared_lib/models/: __init__.py  base_models.py  batching_models.py  pr_suggestion_models.py  utility_models.py
src/mcp_shared_lib/models/analysis/: categorization.py  repository.py  results.py  risk.py
src/mcp_shared_lib/models/base/: common.py  types.py
src/mcp_shared_lib/models/git/: changes.py  commits.py  files.py  repository.py
src/mcp_shared_lib/server/: runner.py
src/mcp_shared_lib/services/git/: git_client.py
src/mcp_shared_lib/state/: __init__.py  manager.py
src/mcp_shared_lib/telemetry/: __init__.py
src/mcp_shared_lib/test_utils/: __init__.py
src/mcp_shared_lib/test_utils/factories/: __init__.py  analysis.py  base.py  files.py  git.py  recommendations.py  scenarios.py  tools.py
src/mcp_shared_lib/tools/: base.py  batch_processor_tool.py  batch_splitter_tool.py  directory_analyzer_tool.py  grouping_strategy_selector_tool.py
src/mcp_shared_lib/transports/: __init__.py  base.py  config.py  factory.py  http.py  sse.py  stdio.py  websocket.py
src/mcp_shared_lib/utils/: __init__.py  git_utils.py  logging_utils.py
src/models/: directory_models.py  grouping_models.py  tool_models.py
src/telemetry/: monitor.py
src/tools/: __init__.py  base_tool.py  file_grouper_tool.py  git_operations.py  group_merging_tool.py  group_refiner_tool.py  group_validator_tool.py
src/utils/: __init__.py  file_utils.py  git_utils.py
tests/: __init__.py  conftest.py  factories.py  factories.py.backup
tests/factories/: files.py  scenarios.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_example.py  test_example.py.bak  test_server.py  test_server.py.bak
