[tool.poetry]
name = "mcp-shared-lib"
version = "0.1.0"
description = "Shared models and services for MCP components"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mcp_shared_lib", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
fastmcp = "^2.6.1"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=mcp_shared_lib --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true